tests/markups/fail-1.expected
ERROR: Attribute 'foo' is not allowed on the <span> tag on line 1 char 25