tests/markups/fail-1.markup
<span foo="bar">blah</span>
